# fair-forge

./: .coverage  .gitignore  .pre-commit-config.yaml  Agentic.ipynb  Bias.ipynb  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Context.ipynb  Conversational.ipynb  Humanity.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  Retrieve.ipynb  coverage.xml  pyproject.toml  requirements.txt  setup.py  transform.ipynb
.claude/: settings.local.json
.claude/skills/commit/: SKILL.md
.claude/skills/docs/: SKILL.md
.github/workflows/: docs-validate.yml  pr-comment.yml  release.yml  test.yml  tests.yml
alquimia/: schemas.py
artifacts/: lexicon.csv
docs/: docs.json  index.mdx  installation.mdx  introduction.mdx  journal.tex  quickstart.mdx  style.css
docs/api-reference/: generators.mdx  metrics.mdx  overview.mdx  runners.mdx  schemas.mdx
docs/core-concepts/: architecture.mdx  dataset-batch.mdx  retriever-streaming.mdx  retriever.mdx  statistical-modes.mdx
docs/examples/: aws-lambda.mdx  jupyter-notebooks.mdx  overview.mdx
docs/explainability/: attributions.mdx  overview.mdx
docs/generators/: base-generator.mdx  context-loaders.mdx  overview.mdx  strategies.mdx
docs/metrics/: agentic.mdx  best-of.mdx  bias.mdx  context.mdx  conversational.mdx  humanity.mdx  overview.mdx  prompt-evaluator.mdx  regulatory.mdx  toxicity.mdx  vision.mdx
docs/prompt-optimizer/: gepa.mdx  miprov2.mdx  overview.mdx
docs/runners/: alquimia-runner.mdx  custom-runners.mdx  overview.mdx
docs/storage/: lakefs-storage.mdx  local-storage.mdx  overview.mdx
elastic/: wordembed.json
examples/: Agentic.ipynb  Bias.ipynb  Context.ipynb  Conversational.ipynb  Humanity.ipynb  README.md  bestOf.ipynb  dataset.json  dataset_bestOf.json  fair-forge.pipeline
examples/agentic/aws-lambda/: run.py  (+3 more)
examples/bestof/: bestof.ipynb  dataset_bestof.json
examples/bias/: bias.ipynb
examples/context/: context.ipynb
examples/data/: dataset.json
examples/generators/: generators.ipynb  generators_alquimia.ipynb  generators_groq.ipynb  generators_openai.ipynb
examples/helpers/: __init__.py  dataset.py  retriever.py  runtime.py
examples/humanity/: humanity.ipynb
examples/pipeline/: Bias.ipynb  Context.ipynb  Conversational.ipynb  Humanity.ipynb  README.md  Runners.ipynb  bestOf.ipynb  fair-forge.pipeline
examples/runners/: runners.ipynb
examples/toxicity/: toxicity.ipynb
experiments/agentic_metrics/: __init__.py  agentic_groq_metrics.ipynb
experiments/prompt_evaluator/: experiment_sushi.ipynb  findings.md  results_sushi.json  retriever.py
fair_forge/: __init__.py  prompts.py  schemas.py
fair_forge/connectors/: lakefs.py
fair_forge/core/: __init__.py  base.py  contradiction_checker.py  document_retriever.py  embedder.py  exceptions.py  extractor.py  guardian.py  loader.py  reranker.py  retriever.py  sentiment.py
fair_forge/embedders/: qwen.py  sentence_transformer.py
fair_forge/explainability/: __init__.py  attributions.py
fair_forge/extractors/: __init__.py  embedding.py
fair_forge/generators/: __init__.py  alquimia_generator.py  groq_generator.py  langchain_generator.py  openai_generator.py
fair_forge/guardians/: __init__.py
fair_forge/helpers/: cot.py  guardian.py  judge.py
fair_forge/llm/: __init__.py  cot.py  judge.py  prompts.py  schemas.py
fair_forge/loaders/: __init__.py  hurtlex.py
fair_forge/metrics/: __init__.py  agentic.py  arena.py  bestOf.py  best_of.py  bias.py  constraints.py  context.py  conversational.py  humanity.py  levenshtein_distance.py  prompt_evaluator.py  regulatory.py  toxicity.py  vision.py
fair_forge/prompt_optimizer/: __init__.py  base.py
fair_forge/rerankers/: qwen.py
fair_forge/runners/: __init__.py  alquimia_runner.py
fair_forge/schemas/: __init__.py  agentic.py  best_of.py  bias.py  common.py  context.py  conversational.py  generators.py  humanity.py  metrics.py  prompt_evaluator.py  regulatory.py  runner.py  storage.py  toxicity.py  vision.py
fair_forge/scorers/: cosine.py
fair_forge/statistical/: __init__.py  base.py  bayesian.py  frequentist.py
fair_forge/storage/: __init__.py  lakefs_storage.py  local_storage.py
fair_forge/utils/: __init__.py  logging.py  math.py
helpers/: dataset.py  fair_forge.py  guardian.py  runtime.py
metrics/: Agentic.ipynb  Bias.ipynb  Conversational.ipynb
package/: guardian.py  main.py  metrics.py  prompts.py  schemas.py
package/helpers/: cot.py  guardian.py  judge.py
package/metrics/: agentic.py  bias.py  context.py  conversational.py  humanity.py
paper/: paper.tex
papers/: prompt_evaluator_en.tex
papers/Agentic/: agentic_en.bbl  agentic_en.blg
papers/Prompt_Evaluator/: prompt_evaluator_en.bbl  prompt_evaluator_en.blg  prompt_evaluator_en.tex  prompt_evaluator_es.tex
papers/context/: context.tex  references.bib
papers/regulatory/: regulatory.tex
test_runner/: config.py  example.env  main.py  test_loader.py  test_runner.py
test_runner/results/: test_run_20260108_135634_19d53532-7e6c-4b13-b569-8cf3bd196752.json
test_runner/storage/: __init__.py  base.py  lakefs_storage.py  local_storage.py
test_runner/tests/: prompt_injection.json  toxicity.json
tests/: README.md  __init__.py  conftest.py
tests/core/: test_base.py
tests/explainability/: test_attributions.py
tests/extractors/: test_embedding.py
tests/fixtures/: __init__.py  mock_data.py  mock_retriever.py
tests/generators/: __init__.py  conftest.py  test_alquimia_generator.py  test_base_generator.py  test_langchain_generators.py  test_local_markdown_loader.py  test_strategies.py
tests/guardians/: test_openai_guardian_provider.py
tests/llm/: test_cot.py  test_judge.py  test_schemas.py
tests/metrics/: __init__.py  test_agentic.py  test_best_of.py  test_bias.py  test_context.py  test_conversational.py  test_humanity.py  test_prompt_evaluator.py  test_regulatory.py  test_toxicity.py  test_vision.py
tests/prompt_optimizer/: conftest.py  test_evaluators.py  test_gepa.py  test_mipro.py
tests/runners/: __init__.py  test_base_runner.py  test_storage.py
tests/statistical/: test_bayesian.py  test_frequentist.py
(+104 files in other folders)
