[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alquimia-fair-forge"
version = "0.1.1"
description = "Alquimia Fair Forge library - Performance measurement for AI models and assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alquimia AI", email = "contact@alquimia.ai"}
]
maintainers = [
    {name = "Alex Fiorenza", email = "alex.fiorenza@alquimia.ai"}
]
keywords = [
    "ai",
    "ml",
    "evaluation",
    "metrics",
    "fairness",
    "toxicity",
    "bias",
    "llm",
    "assistant",
    "nlp",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies - minimal required for basic functionality
dependencies = [
    # LLM Integration (base interface only)
    "langchain-core>=0.3.0,<1.0.0",
    # Data Validation & Utilities
    "pydantic>=2.0.0,<3.0.0",
    "tqdm>=4.65.0",
    "jinja2>=3.1.0",
    # Statistics
    "scipy>=1.14.1",
    # Logging
    "loguru>=0.7.3",
    # Tokenizers (required for schemas)
    "transformers>=4.35.0",
]

[project.optional-dependencies]
# Metrics - install what you need
# LLM-based metrics (require user to install their LLM provider separately, e.g., langchain-groq)
context = []
conversational = []
bestof = []

# Data-based metrics
humanity = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

toxicity = [
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

bias = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0,<1.8",
    "umap-learn>=0.5.6,<0.6.0",
    "hdbscan>=0.8.41",
    "sentence-transformers>=5.0.0",
    "torch>=2.0.0",
]

# All metrics
metrics = [
    "alquimia-fair-forge[context,conversational,bestof,humanity,toxicity,bias]",
]

# Runners module
runners = [
    "alquimia-client>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "aiosseclient>=0.1.8",
]

# Cloud storage support
cloud = [
    "boto3>=1.28.0",
    "lakefs>=0.14.0",
]

# Everything
all = [
    "alquimia-fair-forge[metrics,runners,cloud]",
]

# Development tools
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution

    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",

    # Type stubs
    "types-tqdm>=4.66.0",
    "pandas-stubs>=2.0.0",

    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",

    # Jupyter support
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Alquimia-ai/fair-forge"
Repository = "https://github.com/Alquimia-ai/fair-forge.git"
Documentation = "https://github.com/Alquimia-ai/fair-forge#readme"
"Bug Tracker" = "https://github.com/Alquimia-ai/fair-forge/issues"
Changelog = "https://github.com/Alquimia-ai/fair-forge/releases"

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",

    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",

    # Type stubs
    "types-tqdm>=4.66.0",
    "pandas-stubs>=2.0.0",

    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",

    # Jupyter support
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fair_forge"]

[tool.hatch.build.targets.sdist]
include = [
    "fair_forge/**/*.py",
    "fair_forge/artifacts/**/*",
    "fair_forge/runners/**/*.py",
    "fair_forge/storage/**/*.py",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/test_*.py",
    "tests/**",
    "test_runner/**",
]

# Ruff configuration - Modern, fast Python linter & formatter
[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "TRY003",   # avoid specifying long messages outside exception class
    "PD901",    # avoid using 'df' as variable name
    "B008",     # do not perform function calls in argument defaults (needed for FastAPI/Pydantic)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Allow unused imports and module-level imports
"tests/**/*.py" = ["ARG", "PLR2004", "S101"]  # Allow unused arguments, magic values, and asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["fair_forge"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - Static type checking
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_defs = false  # Set to true when ready for full type coverage
disallow_any_generics = false
disallow_subclassing_any = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "transformers.*",
    "sentence_transformers.*",
    "hdbscan.*",
    "umap.*",
    "lakefs.*",
    "boto3.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",                          # Show summary of all test outcomes
    "--strict-markers",
    "--strict-config",
    "--cov=fair_forge",
    "--cov-branch",                 # Enable branch coverage
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=50",          # Fail if coverage below 50%
    "--tb=short",                   # Shorter traceback format
    "--maxfail=5",                  # Stop after 5 failures
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_gpu: marks tests that require GPU",
    "requires_api_key: marks tests that require API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:pkg_resources",
    "ignore::SyntaxWarning",  
    "ignore::ImportWarning:umap",  
    "error",  
]

# Coverage configuration
[tool.coverage.run]
source = ["fair_forge"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/utils/logging.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true
